--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
         "js": ["jquery-1.9.0.min.js", "shutupguy.js"]
     }],
     "options_page": "options.html",
+    "web_accessible_resources": ["options.html"],
     "permissions": ["storage"],
     "manifest_version": 2
 }
